--- a/index.html
+++ b/index.html
@@ -129,13 +129,25 @@
       <!-- Inizio loghi -->
       <div class="row">
         <div class="col-xs-12">
-          <div class="loghetti">
+          <ul class="loghetti">
+            <li class="flex-item">
             <img src="img/docker.png" alt="docker">
+            </li>
+            <li class="flex-item">
             <img src="img/gitlab.png" alt="gitlab">
+            </li>
+            <li class="flex-item">
             <img src="img/slack.png" alt="slack">
+            </li>
+            <li class="flex-item">
             <img src="img/hashicorp.png" alt="hashicorp">
+            </li>
+            <li class="flex-item">
             <img src="img/wework.png" alt="wework">
+            </li>
+            <li class="flex-item">
             <img src="img/splunk.png" alt="splunk">
+            </li>
           </div>
         </div>
       </div>
